# bam

./: .gitignore  .gitlab-ci.yml  .yamllint.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  bam.yaml  justfile  llms.txt  pyproject.toml  pyrightconfig.json  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pycas-integration.yml  release.yml  update-schema.yml
.gitlab/: generated.gitlab-ci.yml
docs/: cli.md  concept.md  configuration.md
docs/demo/: cache.cast  demo-cache.sh  demo-graph.sh  demo-init.sh  demo-parallel.sh  demo-serve.sh  graph.cast  init.cast  parallel.cast  serve.cast  type
examples/: README.md
examples/complex-graph/: cscd.yaml
examples/error-demo/: bam.yaml  cscd.yaml
examples/hello-world/: bam.yaml  cscd.yaml
examples/live-demo/: bam.yaml  cscd.yaml
examples/multi-language/: bam.yaml  cscd.yaml
examples/parallel/: bam.yaml  cscd.yaml
examples/python-project/: bam.yaml  cascade.yaml
examples/remote-cache/: README.md  bam.yaml  cascade.yaml  cscd.yaml
examples/test-failure/: bam.yaml  cascade.yaml
examples/webproject/: bam.yaml
schema/: bam.schema.json
spec/: architecture.md  design.md  roadmap.md  testing.md
src/bam/: __init__.py  _version.py
src/bam/cache/: __init__.py
src/bam/executor/: executor.py
src/bam/graph/: builder.py
src/bam_tool/: __main__.py  _version.py  cli.py  init.py  watcher.py
src/bam_tool/ci/: __init__.py  generator.py
src/bam_tool/config/: __init__.py  parser.py  schema.py
src/bam_tool/executor/: __init__.py  executor.py
src/bam_tool/graph/: builder.py
src/cascade/: __init__.py  __main__.py  _version.py  cli.py
src/cascade/api/protos/: action_cache.proto
src/cascade/cache/: __init__.py  backend.py  cas.py  factory.py  hash.py  local.py  manager.py
src/cascade/config/: __init__.py  parser.py  schema.py
src/cascade/executor/: executor.py
src/cascade/graph/: __init__.py  builder.py
src/cascade/tasks/: __init__.py  task.py
src/cscd/: _version.py  cli.py
src/cscd/api/protos/: capabilities.proto  cas_simple.proto
src/cscd/cache/: backend.py  cas.py  factory.py  manager.py
src/cscd/config/: __init__.py  parser.py  schema.py
src/cscd/executor/: __init__.py  executor.py
src/cscd/graph/: builder.py
tests/: conftest.py
tests/component/: test_cli_e2e.py
tests/integration/: test_cache_manager.py  test_error_context.py  test_errors.py  test_executor_timeout.py  test_parallel.py  test_rich_progress.py  test_workflows.py
tests/integration-cascache/: .gitignore  README.md  docker-compose.yml  run-tests.sh  test_cascache_integration.py
tests/integration-pycas/: .gitignore  README.md  docker-compose.yml  run-tests.sh  test_pycas_integration.py
tests/unit/: test_cache.py  test_ci_generator.py  test_cli.py  test_config_parser.py  test_executor.py  test_graph_builder.py  test_init.py  test_watcher.py
tests/unit/cache/: test_cas_retry.py
