[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "cascade"
dynamic = ["version"]
description = "**Cascade** is a content-addressed workflow orchestration tool that brings the power of content-addressable storage (CAS) to everyday development workflows"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "ladidadida", email = "stefan@dalada.de" },
]
requires-python = ">=3.13"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "typer>=0.12.0",
  "pyyaml>=6.0.0",
  "pydantic>=2.0.0",
  "networkx>=3.0",
  "rich>=13.0.0",
  "aiofiles>=23.0.0",
  "anyio>=4.0.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=7.0.0",
  "types-networkx>=3.5.0",
  "types-pyyaml>=6.0.12",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
  "pyright>=1.1.0",
  "build>=1.0",
  "twine>=4.0",
  "python-semantic-release>=8.0",
]

[project.scripts]
cascade = "cascade.cli:main"

[tool.hatch.version]
path = "src/cascade/_version.py"
pattern = '__version__ = "(?P<version>[^\"]+)"'

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "tests",
  "README.md",
  "LICENSE",
  "pytest.ini",
  "pyrightconfig.json",
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
  "component: marks tests as component-level (integration, CLI, fixtures)",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "W",    # pycodestyle warnings
  "C90",  # mccabe
  "UP",   # pyupgrade
]
extend-ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.semantic_release]
version_pattern = '__version__ = "{version}"'
version_variable = "src/cascade/_version.py:__version__"
build_command = "uv run python -m build"
upload_to_pypi = false
upload_to_release_tag = true
commit_message = "chore: bump version to {version}"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main|master"
prerelease = false

[tool.ruff.format]
quote-style = "double"
