[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "bam-tool"
dynamic = ["version"]
description = "**bam** is a content-addressed workflow orchestration tool that brings the power of content-addressable storage (CAS) to everyday development workflows. Based on side projects cascache_lib and cascache_server."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "ladidadida", email = "stefan@dalada.de" },
]
requires-python = ">=3.14"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "typer>=0.12.0",
  "pyyaml>=6.0.0",
  "pydantic>=2.0.0",
  "networkx>=3.0",
  "rich>=13.0.0",
  "cascache-lib>=0.1.0",
]

[project.urls]
Homepage = "https://gitlab.com/cascascade/bam"
Repository = "https://gitlab.com/cascascade/bam"
Issues = "https://gitlab.com/cascascade/bam/-/issues"
Documentation = "https://gitlab.com/cascascade/bam/-/blob/main/README.md"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=7.0.0",
  "types-networkx>=3.5.0",
  "types-pyyaml>=6.0.12",
  "ruff>=0.3.0",
  "pyright>=1.1.0",
  "build>=1.0",
  "twine>=4.0",
  "grpcio-tools>=1.64.0",
]
[project.scripts]
bam = "bam_tool.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "tests",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bam_tool"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
console_output_style = "classic"
markers = [
  "component: marks tests as component-level (integration, CLI, fixtures)",
  "cascache: marks tests requiring real cascache server (integration-cascache)",
]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.14"
include = ["src", "tests"]
exclude = [
  "**/.*",
  "**/node_modules",
  "**/__pycache__",
  ".venv",
  "**/generated",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "W",    # pycodestyle warnings
  "C90",  # mccabe
  "UP",   # pyupgrade
]
extend-ignore = [
  "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
